--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,13 @@ lxml
 # http://localhost:8080/get_company_data_by_inn?inn=7709979413
 
 
+
+
+
+
+
+# Описание что делает каждый файл
+
 # dowlaid_captcha - Скрипт, который парсит сайт налоговой службы и извлекает изображения с капчами.
 
 # name - Скрипт, который переименовывает сохраненные капчи в соответствии с тем, что на них изображено.
