--- a/requirements.txt
+++ b/requirements.txt
@@ -14,26 +14,36 @@ lxml
 # python -m venv venv
 # venv\Scripts\activate
 # deactivate
-<<<<<<< HEAD
+
+
 # http://localhost:8080/get_company_data_by_inn?inn=7709979413
 
 ==============================================================================================================================================
 
-# Описание что делает каждый файл
+''' Описание что делает каждый файл
 
-# dowlaid_captcha - Скрипт, который парсит сайт налоговой службы и извлекает изображения с капчами.
+dowlaid_captcha - Скрипт, который парсит сайт налоговой службы и извлекает изображения с капчами.
 
-# name - Скрипт, который переименовывает сохраненные капчи в соответствии с тем, что на них изображено.
+save_captcha - Еще один вариант кк можно скачивать картинки с сайта
 
-# neiro_model - Модель нейронной сети, которая обрабатывает датасет и обучает модель. Она сохраняет модель в формате H5, а затем конвертирует ее в формат ONNX Runtime.
+name - Скрипт, который переименовывает сохраненные капчи в соответствии с тем, что на них изображено.
 
-# test_model_h5 - Скрипт, который тестирует модель в формате H5 на примере одной картинки.
+neiro_model - Модель нейронной сети, которая обрабатывает датасет и обучает модель. Она сохраняет модель в формате H5, а затем конвертирует ее в формат ONNX Runtime.
 
-# test_model_onnx - Скрипт, который тестирует модель в формате ONNX на примере одной картинки.
+test_model_h5 - Скрипт, который тестирует модель в формате H5 на примере одной картинки.
 
-# main_global - Исходное приложение, которое обрабатывает капчи с помощью RuCaptcha.
+test_model_onnx - Скрипт, который тестирует модель в формате ONNX на примере одной картинки.
 
-# main_loggers - Новое приложение, основанное на main_global, в которое внедрена модель нейронной сети для обработки и отправки капчи на сервер.
+main_global - Исходное приложение, которое обрабатывает капчи с помощью RuCaptcha.
+
+main_loggers - Новое приложение, основанное на main_global, в которое внедрена модель нейронной сети для обработки и отправки капчи на сервер.
+
+Clean_img_oll - Очищает изображения 
+
+digit division - разделение очищенной картинки на отдельные цифы 
+
+
+'''
+
 ===============================================================================================================================================
-# http://localhost:8080/get_company_data_by_inn?inn=7709979413
->>>>>>> 30b3cbda45a09067b74412fd2e7312df95535fe9
+
